# ASK_AI

./: .gitignore  README.md  analyze_site.py  demo_poc.py  demo_script.py  pyproject.toml  requirements.txt
app/: __init__.py  agent.py  doc_analyzer.py  main.py  search_engine.py
app/static/: app.js  index.html  style.css
docs/: Implementation_Plan.md  PRD_Skills_Builder.md  Testing_Rubrics.md
docs/fixes/: analysis_and_fix_plan.md  implementation_plan_v2.md  prompt.md
skills/: base_dapp_skill.md
tests/: __init__.py  conftest.py  test_integration.py  test_unit.py
